--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -9,7 +9,9 @@
 	<script>
 	'use strict';
 	$(() => {
-		let socket = io('<%= host %>/roomslist');
+		let socket = io('<%= host %>/roomslist', {
+			transports: ['websocket']
+		});
 		let newRoomInput = $("input[name='roomName']");
 
 		let renderChatRooms = chatrooms => {
